# taproot-signing-demos

./: Cargo.toml  README.md  notes.tx
src/: main.rs
src/adaptor/: adaptor_sig.rs  mod.rs  tr_adaptor.rs
src/multi_sig/: mod.rs  musig2.rs  strawman_musig.rs  tr_musig.rs
src/schnorr_signing/: mod.rs  schnorr_sig.rs  tr_adaptor.rs  tr_shnorr.rs
