[package]
name = "musig_attempt_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorr_fun = "0.7"
secp256kfun="0.7"
sha2 = "0.10.6"
rand="0.8"
bitcoin={version="0.29.1", features = ["std","rand"]}
bitcoin_hashes = "0.11.0"
# secp256k1={version="0.24.0",  features = ["std","rand", "global-context"]}